--- a/JenkinsDemo2/Jenkinsfile
+++ b/JenkinsDemo2/Jenkinsfile
@@ -14,7 +14,7 @@ pipeline{
             steps{
                 checkout scm
                 script {
-                    sh (/clean install -DxmlFiles=$XML -Dbrowser=$Browser -Durl=$URL/)
+                    sh (/ mvn clean install -DxmlFiles=$XML -Dbrowser=$Browser -Durl=$URL/)
                 }
 
                 step ([$class : 'Publisher', reportFilePattern : '**/testng-results.xml'])
